Update content: Fix app name, remove age restriction, update descriptions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tokoyomusubi Shrine - Legal & Support</title>
+    <title>TokoyoMusubi Shrine - Legal & Support</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -150,14 +150,14 @@
     <div class="container">
         <div class="header">
             <img src="tokoyomusubi_shrine_singaku.png" alt="Tokoyomusubi Shrine" class="shrine-image">
-            <h1>Tokoyomusubi Shrine</h1>
-            <p class="subtitle">Virtual Shrine Visit App</p>
+            <h1>TokoyoMusubi Shrine</h1>
         </div>
 
         <div class="app-info">
-            <h2>About the App</h2>
-            <p>Tokoyomusubi Shrine is a virtual shrine visit app that allows you to experience traditional Japanese shrine worship from anywhere.</p>
-            <p>Make offerings, draw omikuji fortunes, and experience the peaceful atmosphere of a Japanese shrine.</p>
+            <h2>About</h2>
+            <p>TokoyoMusubi Shrine is a place of prayer for people living in the modern age.</p>
+            <p>We believe that prayer can be directed even toward new places shaped by human activity.</p>
+            <p>It carries forward a form of worship that connects the heart, free from the constraints of location.</p>
             <div>
                 <span class="badge">Camera-Based Interaction</span>
                 <span class="badge gold">On-Device Processing</span>
@@ -206,7 +206,7 @@
         <div class="footer">
             <p>
                 &copy; 2025 Daiji Imai. All rights reserved.<br>
-                Tokoyomusubi Shrine is available on the Apple App Store.
+                TokoyoMusubi Shrine is available on the Apple App Store.
             </p>
             <p style="color: #AAA; font-size: 0.85em; margin-top: 15px;">
                 Last Updated: December 2025
