--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support - Tokoyomusubi Shrine</title>
+    <title>Support - TokoyoMusubi Shrine</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -87,17 +87,16 @@
 
     <h1>Support</h1>
 
-    <p>Welcome to Tokoyomusubi Shrine support. If you have any questions or need help, please check the FAQ below.</p>
+    <p>Welcome to TokoyoMusubi Shrine support. If you have any questions or need help, please check the FAQ below.</p>
 
     <h2>Frequently Asked Questions (FAQ)</h2>
 
     <div class="faq-item">
-        <div class="faq-question">Q1. How do I use the shrine visit features?</div>
+        <div class="faq-question">Q1. How do I use the app?</div>
         <div class="faq-answer">
             <p>1. Allow camera access when prompted (optional but recommended)</p>
             <p>2. Navigate through the shrine by tapping the screen</p>
             <p>3. At the main hall, you can make offerings and bow</p>
-            <p>4. Draw an omikuji (fortune) to receive your fortune</p>
         </div>
     </div>
 
@@ -117,29 +116,14 @@
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q4. What is omikuji?</div>
-        <div class="faq-answer">
-            <p>Omikuji are fortune-telling paper strips found at Japanese shrines. In this app, you can draw a virtual omikuji to receive a fortune ranging from "Daikichi" (great blessing) to "Daikyo" (great curse).</p>
-            <p>Note: The fortunes are for entertainment purposes only.</p>
-        </div>
-    </div>
-
-    <div class="faq-item">
-        <div class="faq-question">Q5. Is this a real shrine?</div>
-        <div class="faq-answer">
-            <p>No. "Tokoyomusubi Shrine" is a fictional virtual shrine created for this app. It is not affiliated with any real religious organization or shrine.</p>
-        </div>
-    </div>
-
-    <div class="faq-item">
-        <div class="faq-question">Q6. How do I remove ads?</div>
+        <div class="faq-question">Q4. How do I remove ads?</div>
         <div class="faq-answer">
             <p>Currently, there is no option to remove ads in this version of the app. We appreciate your understanding.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q7. The bowing detection doesn't work properly. What should I do?</div>
+        <div class="faq-question">Q5. The bowing detection doesn't work properly. What should I do?</div>
         <div class="faq-answer">
             <p>For best results:</p>
             <ul>
@@ -153,21 +137,14 @@
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q8. How do I change the app language?</div>
-        <div class="faq-answer">
-            <p>The app automatically uses your device's language setting. To change the language, change your device's system language in Settings.</p>
-        </div>
-    </div>
-
-    <div class="faq-item">
-        <div class="faq-question">Q9. Is my personal data safe?</div>
+        <div class="faq-question">Q6. Is my personal data safe?</div>
         <div class="faq-answer">
             <p>Yes. The app does not collect or store personal information. Camera data is processed locally and never leaves your device. All app settings are stored locally on your device. For more details, please read our <a href="privacy-policy.html">Privacy Policy</a>.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q10. How do I report a bug or suggest a feature?</div>
+        <div class="faq-question">Q7. How do I report a bug or suggest a feature?</div>
         <div class="faq-answer">
             <p>We'd love to hear from you! Please email us at <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a> with:</p>
             <ul>
