--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Tokoyomusubi Shrine</title>
+    <title>Privacy Policy - TokoyoMusubi Shrine</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -88,38 +88,27 @@
     <h1>Privacy Policy</h1>
     <p class="last-updated">Last Updated: December 2025</p>
 
-    <p>This Privacy Policy describes how Tokoyomusubi Shrine collects, uses, and shares information when you use this mobile application.</p>
+    <p>This Privacy Policy describes how TokoyoMusubi Shrine collects, uses, and shares information when you use this mobile application.</p>
 
     <h2>1. Information We Collect</h2>
 
-    <h3>1.1 Camera Data</h3>
-    <div class="highlight-box">
-        <strong>Important:</strong> This app uses your device camera for gesture detection (such as bowing). All camera processing is performed <strong>entirely on your device</strong> using Google ML Kit. Camera images and facial detection data are <strong>never transmitted to external servers</strong> and are not stored.
-    </div>
-
-    <h3>1.2 Information You Provide</h3>
-    <p>We do not require you to create an account or provide personal information to use Tokoyomusubi Shrine. The app stores only:</p>
+    <h3>1.1 Information You Provide</h3>
+    <p>We do not require you to create an account or provide personal information to use TokoyoMusubi Shrine. The app stores only:</p>
     <ul>
         <li>App preferences and settings stored locally on your device</li>
     </ul>
 
-    <h3>1.3 Information Collected Automatically</h3>
-    <p>When you use the app, we may automatically collect:</p>
+    <h3>1.2 Information Collected by Advertising Partners</h3>
+    <p>When you use the app, our advertising partners may automatically collect:</p>
     <ul>
         <li><strong>Device Information</strong>: Device type, operating system version, unique device identifiers</li>
-        <li><strong>Usage Data</strong>: App features used, interaction data, crash reports</li>
         <li><strong>Advertising Data</strong>: Information collected by advertising partners (see Section 3)</li>
     </ul>
 
-    <h2>2. How We Use Your Information</h2>
-    <p>We use the collected information for:</p>
-    <ul>
-        <li>Providing and improving the virtual shrine visit experience</li>
-        <li>On-device gesture detection for interactive features</li>
-        <li>Displaying advertisements</li>
-        <li>Analyzing app usage and performance</li>
-        <li>Complying with legal obligations</li>
-    </ul>
+    <h2>2. Camera Usage</h2>
+    <div class="highlight-box">
+        <strong>Important:</strong> This app uses your device camera for gesture detection (such as bowing). All camera processing is performed <strong>entirely on your device</strong> using Google ML Kit. Camera images and facial detection data are <strong>never transmitted to external servers</strong> and are not stored.
+    </div>
 
     <h2>3. Third-Party Services</h2>
 
@@ -186,26 +175,23 @@
     <h2>5. Data Retention</h2>
     <p>We retain data only as long as necessary to provide the services and comply with legal obligations. Most data is stored locally on your device and can be deleted by uninstalling the app.</p>
 
-    <h2>6. Children's Privacy</h2>
-    <p>This app is not directed to children under 13 years of age. We do not knowingly collect personal information from children under 13. If you believe we have collected information from a child under 13, please contact us.</p>
-
-    <h2>7. International Data Transfers</h2>
+    <h2>6. International Data Transfers</h2>
     <p>Your information may be transferred to and processed in countries other than your own, including the United States. We ensure appropriate safeguards are in place to protect your data in accordance with this Privacy Policy.</p>
 
-    <h2>8. Security</h2>
+    <h2>7. Security</h2>
     <p>We implement reasonable security measures to protect your information. However, no method of transmission over the internet or electronic storage is 100% secure.</p>
 
-    <h2>9. Changes to This Privacy Policy</h2>
+    <h2>8. Changes to This Privacy Policy</h2>
     <p>We may update this Privacy Policy from time to time. We will notify you of any changes by updating the "Last Updated" date at the top of this policy. Continued use of the app after changes constitutes acceptance of the updated policy.</p>
 
-    <h2>10. Contact Us</h2>
+    <h2>9. Contact Us</h2>
     <div class="contact">
         <p>If you have any questions about this Privacy Policy or wish to exercise your privacy rights, please contact us at:</p>
         <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
         <p><strong>Developer:</strong> Daiji Imai</p>
     </div>
 
-    <h2>11. Consent Management</h2>
+    <h2>10. Consent Management</h2>
     <p>When you first launch the app, you will be presented with a consent dialog (for users in applicable regions) where you can:</p>
     <ul>
         <li>Accept personalized advertising</li>
