--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Tokoyomusubi Shrine</title>
+    <title>Terms of Service - TokoyoMusubi Shrine</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -81,17 +81,16 @@
     <h1>Terms of Service</h1>
     <p class="last-updated">Last Updated: December 2025</p>
 
-    <p>Welcome to Tokoyomusubi Shrine. By downloading, installing, or using this application, you agree to be bound by these Terms of Service ("Terms"). Please read them carefully.</p>
+    <p>Welcome to TokoyoMusubi Shrine. By downloading, installing, or using this application, you agree to be bound by these Terms of Service ("Terms"). Please read them carefully.</p>
 
     <h2>1. Acceptance of Terms</h2>
-    <p>By accessing or using Tokoyomusubi Shrine ("the App"), you agree to comply with and be bound by these Terms. If you do not agree to these Terms, please do not use the App.</p>
+    <p>By accessing or using TokoyoMusubi Shrine ("the App"), you agree to comply with and be bound by these Terms. If you do not agree to these Terms, please do not use the App.</p>
 
-    <h2>2. Description of Service</h2>
-    <p>Tokoyomusubi Shrine is a mobile application that provides:</p>
+    <h2>2. About TokoyoMusubi Shrine</h2>
+    <p>TokoyoMusubi Shrine is a place of prayer for people living in the modern age. We believe that prayer can be directed even toward new places shaped by human activity. It carries forward a form of worship that connects the heart, free from the constraints of location.</p>
+    <p>The App provides:</p>
     <ul>
-        <li>Virtual shrine visit with interactive features</li>
         <li>Camera-based gesture detection for bowing and other interactions</li>
-        <li>Omikuji (fortune telling) feature</li>
         <li>Saisen (offering) feature</li>
         <li>Advertisement display</li>
     </ul>
@@ -112,9 +111,6 @@
         <li>Use any automated system to access the App</li>
     </ul>
 
-    <h3>3.3 Age Requirement</h3>
-    <p>You must be at least 13 years old to use this App. If you are under 13, please do not use the App.</p>
-
     <h2>4. Camera Usage</h2>
 
     <h3>4.1 Purpose</h3>
@@ -127,12 +123,7 @@
     <p>You can enable or disable camera access at any time through your device settings.</p>
 
     <h2>5. AI-Generated Content</h2>
-
-    <h3>5.1 Disclosure</h3>
-    <p>Some images and videos in this App were generated using AI models, including Stable Diffusion XL and Wan2.1/2.2. These are used for visual presentation purposes only.</p>
-
-    <h3>5.2 No Religious Affiliation</h3>
-    <p>This App is for entertainment purposes only and is not affiliated with any real shrine or religious organization. The "Tokoyomusubi Shrine" is a fictional creation.</p>
+    <p>Some images and videos in this App were generated using AI models, including Stable Diffusion XL and Wan2.1/2.2. These are used for visual presentation purposes.</p>
 
     <h2>6. Advertising</h2>
 
@@ -170,9 +161,6 @@
         <li>The results obtained from the use of the App will be accurate or reliable</li>
         <li>Any errors in the App will be corrected</li>
     </ul>
-
-    <h3>10.3 Entertainment Only</h3>
-    <p>The omikuji (fortune) results and other features are for entertainment purposes only and should not be taken as actual predictions or advice.</p>
 
     <h2>11. Limitation of Liability</h2>
     <p>To the maximum extent permitted by law, Daiji Imai shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses resulting from:</p>
