--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -75,6 +75,14 @@
             border-radius: 5px;
             margin: 20px 0;
         }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ccc;
+            color: #888;
+            font-size: 0.9em;
+        }
     </style>
 </head>
 <body>
@@ -88,117 +96,90 @@
     <h1>Privacy Policy</h1>
     <p class="last-updated">Last Updated: December 2025</p>
 
-    <p>This Privacy Policy describes how TokoyoMusubi Shrine collects, uses, and shares information when you use this mobile application.</p>
+    <p>This Privacy Policy explains how TokoyoMusubi Shrine handles information when you use this mobile application.</p>
 
     <h2>1. Information We Collect</h2>
 
     <h3>1.1 Information You Provide</h3>
-    <p>We do not require you to create an account or provide personal information to use TokoyoMusubi Shrine. The app stores only:</p>
+    <p>TokoyoMusubi Shrine does not require you to create an account or provide personal information.</p>
+    <p>The app stores only limited, non-personal data locally on your device, such as:</p>
     <ul>
-        <li>App preferences and settings stored locally on your device</li>
+        <li>App preferences and settings</li>
+        <li>In-app item status (e.g. remaining counts or cooldown timing)</li>
     </ul>
+    <p>This data is used solely to support the operation of the app and is not transmitted to external servers.</p>
 
-    <h3>1.2 Information Collected by Advertising Partners</h3>
-    <p>When you use the app, our advertising partners may automatically collect:</p>
+    <h3>1.2 Information Related to Advertising</h3>
+    <p>The app displays advertisements using third-party services. These services may collect certain information automatically in accordance with their own privacy policies, such as:</p>
     <ul>
-        <li><strong>Device Information</strong>: Device type, operating system version, unique device identifiers</li>
-        <li><strong>Advertising Data</strong>: Information collected by advertising partners (see Section 3)</li>
+        <li>Device type and operating system</li>
+        <li>Advertising identifiers</li>
+        <li>General usage data</li>
     </ul>
+    <p>TokoyoMusubi Shrine does not directly access, store, or control this information.</p>
 
     <h2>2. Camera Usage</h2>
     <div class="highlight-box">
-        <strong>Important:</strong> This app uses your device camera for gesture detection (such as bowing). All camera processing is performed <strong>entirely on your device</strong> using Google ML Kit. Camera images and facial detection data are <strong>never transmitted to external servers</strong> and are not stored.
+        <p>This app uses your device camera to support gesture-based interactions during worship (such as bowing).</p>
+        <p>All camera processing is performed <strong>entirely on your device</strong> using on-device machine learning technology (Google ML Kit).</p>
+        <p>Camera images and facial detection data are <strong>not recorded, stored, or transmitted</strong> to external servers.</p>
     </div>
 
     <h2>3. Third-Party Services</h2>
 
     <h3>3.1 Google ML Kit</h3>
-    <p>This app uses Google ML Kit for face detection to enable gesture-based interactions. All processing is performed on-device, and no facial data is sent to external servers.</p>
+    <p>Used for on-device gesture and face detection. All processing occurs locally on the device.</p>
     <ul>
-        <li><a href="https://developers.google.com/ml-kit/terms" target="_blank">ML Kit Terms of Service</a></li>
+        <li><a href="https://developers.google.com/ml-kit/terms" target="_blank">Google ML Kit Terms of Service</a></li>
         <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
     </ul>
 
-    <h3>3.2 Google AdMob</h3>
-    <p>We use Google AdMob to display advertisements in the app. AdMob may collect and use information about you to provide personalized ads. This includes:</p>
-    <ul>
-        <li>Advertising ID (IDFA on iOS)</li>
-        <li>IP address and geographic location</li>
-        <li>Device information and app usage data</li>
-    </ul>
-    <p>For more information about how Google uses your data, please see:</p>
+    <h3>3.2 Advertising Services</h3>
+    <p>Advertisements may be provided through third-party services such as Google AdMob.</p>
+    <p>These services may process information independently in order to deliver ads. For details, please refer to:</p>
     <ul>
         <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
-        <li><a href="https://policies.google.com/technologies/partner-sites" target="_blank">How Google uses information from sites or apps that use our services</a></li>
+        <li><a href="https://policies.google.com/technologies/partner-sites" target="_blank">How Google uses information from sites or apps that use its services</a></li>
     </ul>
 
     <h3>3.3 Apple App Store</h3>
-    <p>App downloads and any future purchases are processed by Apple. We do not store your payment information. Please refer to:</p>
+    <p>App distribution and any purchases are handled by Apple. TokoyoMusubi Shrine does not store payment information.</p>
     <ul>
         <li><a href="https://www.apple.com/legal/privacy/" target="_blank">Apple Privacy Policy</a></li>
     </ul>
 
     <h2>4. Your Privacy Choices</h2>
 
-    <h3>4.1 Camera Permissions</h3>
-    <p>You can control camera access through your device settings. Denying camera permission will disable gesture-based features, but you can still use other app features.</p>
+    <h3>Camera Permission</h3>
+    <p>You may control camera access through your device settings. If camera access is disabled, gesture-based features will be unavailable.</p>
 
-    <h3>4.2 GDPR Rights (European Users)</h3>
-    <p>If you are located in the European Economic Area (EEA), you have the following rights:</p>
+    <h3>Advertising Preferences</h3>
+    <p>You may manage ad personalization through your device settings:</p>
     <ul>
-        <li><strong>Access</strong>: Request access to your personal data</li>
-        <li><strong>Rectification</strong>: Request correction of inaccurate data</li>
-        <li><strong>Erasure</strong>: Request deletion of your data</li>
-        <li><strong>Restriction</strong>: Request restriction of processing</li>
-        <li><strong>Data Portability</strong>: Request transfer of your data</li>
-        <li><strong>Object</strong>: Object to data processing</li>
-        <li><strong>Withdraw Consent</strong>: Withdraw consent at any time</li>
-    </ul>
-
-    <h3>4.3 CCPA Rights (California Users)</h3>
-    <p>If you are a California resident, you have the right to:</p>
-    <ul>
-        <li>Know what personal information is collected</li>
-        <li>Know whether your personal information is sold or disclosed</li>
-        <li>Opt-out of the sale of your personal information</li>
-        <li>Request deletion of your personal information</li>
-        <li>Non-discrimination for exercising your rights</li>
-    </ul>
-
-    <h3>4.4 Advertising Choices</h3>
-    <p>You can control personalized advertising:</p>
-    <ul>
-        <li><strong>iOS</strong>: Settings > Privacy & Security > Tracking > Allow Apps to Request to Track (disable)</li>
-        <li><strong>In-App</strong>: When prompted by the consent dialog, you can choose to limit ad personalization</li>
+        <li><strong>iOS</strong>: Settings &gt; Privacy &amp; Security &gt; Tracking</li>
     </ul>
 
     <h2>5. Data Retention</h2>
-    <p>We retain data only as long as necessary to provide the services and comply with legal obligations. Most data is stored locally on your device and can be deleted by uninstalling the app.</p>
+    <p>Most app data is stored locally on your device. Uninstalling the app will remove this data.</p>
 
-    <h2>6. International Data Transfers</h2>
-    <p>Your information may be transferred to and processed in countries other than your own, including the United States. We ensure appropriate safeguards are in place to protect your data in accordance with this Privacy Policy.</p>
+    <h2>6. International Data Handling</h2>
+    <p>Third-party services may process data in countries outside your own, including the United States, in accordance with their privacy policies.</p>
 
     <h2>7. Security</h2>
-    <p>We implement reasonable security measures to protect your information. However, no method of transmission over the internet or electronic storage is 100% secure.</p>
+    <p>Reasonable technical measures are taken to protect data handled by the app. However, no system can guarantee absolute security.</p>
 
-    <h2>8. Changes to This Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by updating the "Last Updated" date at the top of this policy. Continued use of the app after changes constitutes acceptance of the updated policy.</p>
+    <h2>8. Changes to This Policy</h2>
+    <p>This Privacy Policy may be updated from time to time. The "Last Updated" date will reflect any changes.</p>
 
-    <h2>9. Contact Us</h2>
+    <h2>9. Contact</h2>
     <div class="contact">
-        <p>If you have any questions about this Privacy Policy or wish to exercise your privacy rights, please contact us at:</p>
+        <p>If you have questions about this Privacy Policy, please contact:</p>
         <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
-        <p><strong>Developer:</strong> Daiji Imai</p>
     </div>
 
-    <h2>10. Consent Management</h2>
-    <p>When you first launch the app, you will be presented with a consent dialog (for users in applicable regions) where you can:</p>
-    <ul>
-        <li>Accept personalized advertising</li>
-        <li>Choose limited (non-personalized) ads</li>
-        <li>Review partners and purposes</li>
-    </ul>
-    <p>You can change your consent preferences at any time by clearing the app data or reinstalling the app.</p>
+    <div class="footer">
+        <p>&copy; 2025 Daiji Imai</p>
+    </div>
 
 </body>
 </html>
