--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -68,6 +68,14 @@
             text-decoration: underline;
             color: #FFD700;
         }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ccc;
+            color: #888;
+            font-size: 0.9em;
+        }
     </style>
 </head>
 <body>
@@ -81,136 +89,88 @@
     <h1>Terms of Service</h1>
     <p class="last-updated">Last Updated: December 2025</p>
 
-    <p>Welcome to TokoyoMusubi Shrine. By downloading, installing, or using this application, you agree to be bound by these Terms of Service ("Terms"). Please read them carefully.</p>
+    <p>These Terms of Service ("Terms") govern your use of the TokoyoMusubi Shrine mobile application ("the App"). By downloading or using the App, you agree to these Terms.</p>
 
     <h2>1. Acceptance of Terms</h2>
-    <p>By accessing or using TokoyoMusubi Shrine ("the App"), you agree to comply with and be bound by these Terms. If you do not agree to these Terms, please do not use the App.</p>
+    <p>By accessing or using the App, you agree to comply with these Terms. If you do not agree, please do not use the App.</p>
 
-    <h2>2. About TokoyoMusubi Shrine</h2>
-    <p>TokoyoMusubi Shrine is a place of prayer for people living in the modern age. We believe that prayer can be directed even toward new places shaped by human activity. It carries forward a form of worship that connects the heart, free from the constraints of location.</p>
-    <p>The App provides:</p>
+    <h2>2. About the App</h2>
+    <p>TokoyoMusubi Shrine is an application designed to support prayer and worship in a modern context.</p>
+    <p>The App provides features such as:</p>
     <ul>
-        <li>Camera-based gesture detection for bowing and other interactions</li>
-        <li>Saisen (offering) feature</li>
+        <li>Gesture-based interactions using the device camera</li>
+        <li>In-app resource management related to worship flow</li>
         <li>Advertisement display</li>
     </ul>
 
-    <h2>3. Use of the App</h2>
+    <h2>3. License and Use</h2>
 
     <h3>3.1 License</h3>
-    <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for your personal, non-commercial use, subject to these Terms.</p>
+    <p>You are granted a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes, subject to these Terms.</p>
 
     <h3>3.2 Restrictions</h3>
-    <p>You agree NOT to:</p>
+    <p>You agree not to:</p>
     <ul>
         <li>Modify, reverse engineer, decompile, or disassemble the App</li>
-        <li>Remove any copyright or proprietary notices from the App</li>
-        <li>Use the App for any unlawful purpose</li>
-        <li>Attempt to gain unauthorized access to any portion of the App</li>
-        <li>Interfere with or disrupt the App or servers connected to the App</li>
-        <li>Use any automated system to access the App</li>
+        <li>Remove proprietary notices</li>
+        <li>Use the App for unlawful purposes</li>
+        <li>Attempt unauthorized access</li>
+        <li>Interfere with the operation of the App</li>
+        <li>Use automated systems to access the App</li>
     </ul>
 
     <h2>4. Camera Usage</h2>
+    <p>The App may use your device camera to support gesture-based interactions.</p>
+    <ul>
+        <li>Camera usage is optional</li>
+        <li>All processing is performed locally on your device</li>
+        <li>No camera images or facial data are stored or transmitted</li>
+    </ul>
+    <p>Camera permissions can be managed through your device settings.</p>
 
-    <h3>4.1 Purpose</h3>
-    <p>The App uses your device camera to detect gestures (such as bowing) for interactive shrine visit features. This is entirely optional, and you can use the App without enabling camera access.</p>
-
-    <h3>4.2 On-Device Processing</h3>
-    <p>All camera processing is performed locally on your device using Google ML Kit. Camera images and facial detection data are never transmitted to external servers.</p>
-
-    <h3>4.3 Permission</h3>
-    <p>You can enable or disable camera access at any time through your device settings.</p>
-
-    <h2>5. AI-Generated Content</h2>
-    <p>Some images and videos in this App were generated using AI models, including Stable Diffusion XL and Wan2.1/2.2. These are used for visual presentation purposes.</p>
+    <h2>5. Visual Content</h2>
+    <p>Some visual content in the App may be created or assisted using generative technologies for presentation purposes.</p>
 
     <h2>6. Advertising</h2>
-
-    <h3>6.1 Ad Display</h3>
-    <p>The App displays advertisements provided by Google AdMob. By using the App, you agree to view these advertisements.</p>
-
-    <h3>6.2 Third-Party Ads</h3>
-    <p>We are not responsible for the content of third-party advertisements displayed in the App.</p>
+    <p>The App may display third-party advertisements.</p>
+    <ul>
+        <li>Advertisement content is provided by external services</li>
+        <li>TokoyoMusubi Shrine is not responsible for the content of third-party ads</li>
+    </ul>
 
     <h2>7. Intellectual Property</h2>
-
-    <h3>7.1 Ownership</h3>
-    <p>The App and all content, including but not limited to text, graphics, logos, icons, images, and software, are the property of Daiji Imai or its licensors and are protected by copyright, trademark, and other intellectual property laws.</p>
-
-    <h3>7.2 Trademarks</h3>
-    <p>All trademarks, service marks, and trade names are proprietary to Daiji Imai or their respective owners.</p>
+    <p>All content and software within the App are owned by or licensed to the developer and are protected by applicable intellectual property laws.</p>
 
     <h2>8. User Content</h2>
-
-    <h3>8.1 No User Content</h3>
-    <p>The App does not allow users to submit, upload, or share content. All settings and preferences are stored locally on your device.</p>
+    <p>The App does not allow users to submit, upload, or share content. All app-related data remains on the user's device unless otherwise stated.</p>
 
     <h2>9. Privacy</h2>
-    <p>Your use of the App is also governed by our <a href="privacy-policy.html">Privacy Policy</a>. Please review the Privacy Policy to understand our data collection and use practices.</p>
+    <p>Use of the App is governed by the <a href="privacy-policy.html">Privacy Policy</a>. Please review it to understand how information is handled.</p>
 
     <h2>10. Disclaimers</h2>
-
-    <h3>10.1 "As Is" Basis</h3>
-    <p>The App is provided on an "as is" and "as available" basis without warranties of any kind, either express or implied, including but not limited to warranties of merchantability, fitness for a particular purpose, or non-infringement.</p>
-
-    <h3>10.2 No Warranty</h3>
-    <p>We do not warrant that:</p>
-    <ul>
-        <li>The App will be uninterrupted, timely, secure, or error-free</li>
-        <li>The results obtained from the use of the App will be accurate or reliable</li>
-        <li>Any errors in the App will be corrected</li>
-    </ul>
+    <p>The App is provided on an "as is" and "as available" basis. No warranties are made regarding availability, accuracy, or reliability.</p>
 
     <h2>11. Limitation of Liability</h2>
-    <p>To the maximum extent permitted by law, Daiji Imai shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses resulting from:</p>
-    <ul>
-        <li>Your use or inability to use the App</li>
-        <li>Any unauthorized access to or use of servers and/or any personal information stored therein</li>
-        <li>Any bugs, viruses, or other harmful code transmitted through the App</li>
-        <li>Any errors or omissions in any content or for any loss or damage incurred as a result of your use of any content</li>
-    </ul>
+    <p>To the maximum extent permitted by law, TokoyoMusubi Shrine shall not be liable for indirect or consequential damages arising from the use or inability to use the App.</p>
 
-    <h2>12. Indemnification</h2>
-    <p>You agree to indemnify, defend, and hold harmless Daiji Imai from and against any claims, liabilities, damages, losses, and expenses, including reasonable attorneys' fees, arising out of or in any way connected with your use of the App or violation of these Terms.</p>
+    <h2>12. Termination</h2>
+    <p>You may stop using the App at any time by uninstalling it.</p>
+    <p>TokoyoMusubi Shrine reserves the right to discontinue or suspend the App at any time.</p>
 
-    <h2>13. Termination</h2>
+    <h2>13. Changes to Terms</h2>
+    <p>These Terms may be updated periodically. Continued use of the App after updates constitutes acceptance of the revised Terms.</p>
 
-    <h3>13.1 Termination by You</h3>
-    <p>You may stop using the App at any time by uninstalling it from your device.</p>
+    <h2>14. Governing Law</h2>
+    <p>These Terms are governed by the laws of Japan.</p>
 
-    <h3>13.2 Termination by Us</h3>
-    <p>We reserve the right to suspend or terminate your access to the App at any time, without notice, for any reason, including but not limited to violation of these Terms.</p>
-
-    <h3>13.3 Service Discontinuation</h3>
-    <p>We reserve the right to discontinue or terminate the App service at any time without prior notice. We are not liable for any losses or damages resulting from service discontinuation.</p>
-
-    <h2>14. Changes to Terms</h2>
-    <p>We may update these Terms from time to time. We will notify you of any changes by updating the "Last Updated" date at the top of these Terms. Your continued use of the App after any changes constitutes acceptance of the updated Terms.</p>
-
-    <h2>15. Governing Law</h2>
-    <p>These Terms shall be governed by and construed in accordance with the laws of Japan, without regard to its conflict of law provisions.</p>
-
-    <h2>16. Dispute Resolution</h2>
-
-    <h3>16.1 Informal Resolution</h3>
-    <p>If you have any dispute with us, please contact us first at <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a> to attempt to resolve the dispute informally.</p>
-
-    <h3>16.2 Legal Proceedings</h3>
-    <p>If we cannot resolve the dispute informally, any legal proceedings shall be subject to the exclusive jurisdiction of the courts of Japan.</p>
-
-    <h2>17. Severability</h2>
-    <p>If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions shall remain in full force and effect.</p>
-
-    <h2>18. Entire Agreement</h2>
-    <p>These Terms, together with the Privacy Policy, constitute the entire agreement between you and Daiji Imai regarding the use of the App.</p>
-
-    <h2>19. Contact Us</h2>
+    <h2>15. Contact</h2>
     <div class="contact">
-        <p>If you have any questions about these Terms of Service, please contact us at:</p>
+        <p>If you have questions about these Terms, please contact:</p>
         <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
-        <p><strong>Developer:</strong> Daiji Imai</p>
-        <p><strong>Support:</strong> <a href="support.html">Visit Support Page</a></p>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2025 Daiji Imai</p>
     </div>
 
 </body>
