--- a/index.html
+++ b/index.html
@@ -158,11 +158,6 @@
             <p>TokoyoMusubi Shrine is a place of prayer for people living in the modern age.</p>
             <p>We believe that prayer can be directed even toward new places shaped by human activity.</p>
             <p>It carries forward a form of worship that connects the heart, free from the constraints of location.</p>
-            <div>
-                <span class="badge">Camera-Based Interaction</span>
-                <span class="badge gold">On-Device Processing</span>
-                <span class="badge">iOS</span>
-            </div>
         </div>
 
         <h2 style="text-align: center; margin-top: 40px; color: #B22222;">Legal & Support</h2>
@@ -172,7 +167,7 @@
                 <div class="card-icon">&#128274;</div>
                 <div class="card-title">Privacy Policy</div>
                 <div class="card-description">
-                    Learn how we collect, use, and protect your data. GDPR & CCPA compliant.
+                    This page explains how limited, non-personal data is handled to support the operation of the app.
                 </div>
                 <a href="privacy-policy.html" class="card-link">Read Policy</a>
             </div>
@@ -181,7 +176,7 @@
                 <div class="card-icon">&#128220;</div>
                 <div class="card-title">Terms of Service</div>
                 <div class="card-description">
-                    Understand your rights and responsibilities when using this app.
+                    This page outlines the basic terms for using TokoyoMusubi Shrine.
                 </div>
                 <a href="terms-of-service.html" class="card-link">Read Terms</a>
             </div>
@@ -190,17 +185,15 @@
                 <div class="card-icon">&#128172;</div>
                 <div class="card-title">Support</div>
                 <div class="card-description">
-                    Get help, FAQs, and contact information for customer support.
+                    For questions or support regarding the app, please contact us by email.
                 </div>
                 <a href="support.html" class="card-link">Get Support</a>
             </div>
         </div>
 
         <div class="contact-box">
-            <h3>Need Help?</h3>
+            <h3>Contact</h3>
             <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
-            <p><strong>Developer:</strong> Daiji Imai</p>
-            <p><strong>Response Time:</strong> I typically respond within 2 weeks</p>
         </div>
 
         <div class="footer">
