--- a/support.html
+++ b/support.html
@@ -23,9 +23,6 @@
             color: #5D4037;
             margin-top: 30px;
         }
-        h3 {
-            color: #555;
-        }
         a {
             color: #B22222;
             text-decoration: none;
@@ -69,11 +66,19 @@
             text-decoration: underline;
             color: #FFD700;
         }
-        ul {
+        ul, ol {
             padding-left: 25px;
         }
         li {
             margin-bottom: 8px;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ccc;
+            color: #888;
+            font-size: 0.9em;
         }
     </style>
 </head>
@@ -87,91 +92,88 @@
 
     <h1>Support</h1>
 
-    <p>Welcome to TokoyoMusubi Shrine support. If you have any questions or need help, please check the FAQ below.</p>
+    <p>If you have any questions or need assistance with TokoyoMusubi Shrine, please refer to the FAQ below or contact us by email.</p>
 
-    <h2>Frequently Asked Questions (FAQ)</h2>
+    <h2>Frequently Asked Questions</h2>
 
     <div class="faq-item">
-        <div class="faq-question">Q1. How do I use the app?</div>
+        <div class="faq-question">How do I use the app?</div>
         <div class="faq-answer">
-            <p>1. Allow camera access when prompted (optional but recommended)</p>
-            <p>2. Navigate through the shrine by tapping the screen</p>
-            <p>3. At the main hall, you can make offerings and bow</p>
+            <ol>
+                <li>Allow camera access when prompted (optional)</li>
+                <li>Navigate through the shrine by tapping the screen</li>
+                <li>At the main hall, you can perform in-app worship actions and bow</li>
+            </ol>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q2. Why does the app need camera access?</div>
+        <div class="faq-question">Why does the app request camera access?</div>
         <div class="faq-answer">
-            <p>The camera is used to detect your bowing gesture for an interactive experience. This processing happens entirely on your device - no images or facial data are sent to any server.</p>
-            <p>Camera access is optional. You can still use the app without it.</p>
+            <p>The camera is used to detect bowing gestures as part of the worship flow.</p>
+            <p>All processing is performed entirely on your device. No images or facial data are transmitted or stored.</p>
+            <p>Camera access is optional, and the app can be used without it.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q3. Is my camera data being sent somewhere?</div>
+        <div class="faq-question">Is my camera data sent anywhere?</div>
         <div class="faq-answer">
-            <p><strong>No.</strong> All camera processing is performed locally on your device using Google ML Kit. Your camera images and facial detection data are never transmitted to external servers and are not stored.</p>
+            <p><strong>No.</strong></p>
+            <p>All camera processing occurs locally on your device. No images or facial detection data leave your device.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q4. How do I remove ads?</div>
+        <div class="faq-question">Can I remove ads?</div>
         <div class="faq-answer">
-            <p>Currently, there is no option to remove ads in this version of the app. We appreciate your understanding.</p>
+            <p>There is currently no option to remove ads in this version.</p>
+            <p>Thank you for your understanding.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q5. The bowing detection doesn't work properly. What should I do?</div>
+        <div class="faq-question">The gesture detection doesn't seem to work. What should I do?</div>
         <div class="faq-answer">
             <p>For best results:</p>
             <ul>
-                <li>Make sure you're in a well-lit environment</li>
-                <li>Position your face clearly in the camera view</li>
+                <li>Ensure you are in a well-lit environment</li>
+                <li>Position your face clearly within the camera view</li>
                 <li>Bow slowly and deliberately</li>
-                <li>Ensure no obstructions are blocking your face</li>
+                <li>Avoid obstructions in front of your face</li>
             </ul>
-            <p>If problems persist, try restarting the app.</p>
+            <p>If issues persist, please try restarting the app.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q6. Is my personal data safe?</div>
+        <div class="faq-question">Is my personal data safe?</div>
         <div class="faq-answer">
-            <p>Yes. The app does not collect or store personal information. Camera data is processed locally and never leaves your device. All app settings are stored locally on your device. For more details, please read our <a href="privacy-policy.html">Privacy Policy</a>.</p>
+            <p>TokoyoMusubi Shrine does not collect or store personal information.</p>
+            <p>Camera data is processed locally on your device and never leaves it. For more details, please see our <a href="privacy-policy.html">Privacy Policy</a>.</p>
         </div>
     </div>
 
     <div class="faq-item">
-        <div class="faq-question">Q7. How do I report a bug or suggest a feature?</div>
+        <div class="faq-question">How can I report a bug or suggest a feature?</div>
         <div class="faq-answer">
-            <p>We'd love to hear from you! Please email us at <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a> with:</p>
+            <p>Please contact us by email with the following information:</p>
             <ul>
-                <li>A description of the bug or feature request</li>
+                <li>A description of the issue or suggestion</li>
                 <li>Your device model and iOS version</li>
-                <li>Screenshots (if applicable)</li>
+                <li>Screenshots, if applicable</li>
             </ul>
         </div>
     </div>
 
-    <h2>Legal</h2>
-    <ul>
-        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-        <li><a href="terms-of-service.html">Terms of Service</a></li>
-    </ul>
-
-    <h2>Version Information</h2>
-    <p><strong>Current Version:</strong> 0.5.0</p>
-    <p><strong>Minimum iOS Version:</strong> iOS 15.0 or later</p>
-
-    <h2>Contact Us</h2>
+    <h2>Contact</h2>
     <div class="contact">
-        <p>If you can't find the answer to your question or need further assistance, please contact us:</p>
+        <p>For questions or support, please contact:</p>
         <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
-        <p><strong>Developer:</strong> Daiji Imai</p>
-        <p><strong>Response Time:</strong> We typically respond within 2 weeks</p>
-        <p>We're here to help!</p>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2025 Daiji Imai</p>
     </div>
 
 </body>
