--- a/index.html
+++ b/index.html
@@ -14,9 +14,25 @@
             color: #333;
             background: linear-gradient(180deg, #E8E8E8 0%, #D4D4D4 100%);
             min-height: 100vh;
+            position: relative;
+        }
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('honden_01wide.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            opacity: 0.3;
+            z-index: -1;
+            pointer-events: none;
         }
         .container {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.5);
             border-radius: 10px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.15);
