--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="app-info">
             <h2>About</h2>
             <p>TokoyoMusubi Shrine is a place of prayer for people living in the modern age.</p>
-            <p>We believe that prayer can be directed even toward new places shaped by human activity.</p>
+            <p>I believe that prayer can be directed even toward new places shaped by human activity.</p>
             <p>It carries forward a form of worship that connects the heart, free from the constraints of location.</p>
         </div>
 
@@ -214,7 +214,7 @@
 
         <div class="footer">
             <p>
-                &copy; 2025 Daiji Imai. All rights reserved.<br>
+                &copy; 2025 DAIJI IMAI. All rights reserved.<br>
                 TokoyoMusubi Shrine is available on the Apple App Store.
             </p>
             <p style="color: #AAA; font-size: 0.85em; margin-top: 15px;">
