--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -114,7 +114,7 @@
 
     <p>This Privacy Policy explains how TokoyoMusubi Shrine handles information when you use this mobile application.</p>
 
-    <h2>1. Information We Collect</h2>
+    <h2>1. Information I Collect</h2>
 
     <h3>1.1 Information You Provide</h3>
     <p>TokoyoMusubi Shrine does not require you to create an account or provide personal information.</p>
@@ -196,7 +196,7 @@
     <div class="footer">
         <img src="tokoyomusubi_shrine_singaku.png" alt="TokoyoMusubi Shrine" style="width: 80px; margin-bottom: 10px;">
         <p style="margin: 5px 0;">TokoyoMusubi Shrine</p>
-        <p style="font-size: 0.75em; color: #999;">&copy; 2025 Daiji Imai</p>
+        <p style="font-size: 0.75em; color: #999;">&copy; 2025 DAIJI IMAI</p>
     </div>
 
 </body>
