--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -188,7 +188,7 @@
     <div class="footer">
         <img src="tokoyomusubi_shrine_singaku.png" alt="TokoyoMusubi Shrine" style="width: 80px; margin-bottom: 10px;">
         <p style="margin: 5px 0;">TokoyoMusubi Shrine</p>
-        <p style="font-size: 0.75em; color: #999;">&copy; 2025 Daiji Imai</p>
+        <p style="font-size: 0.75em; color: #999;">&copy; 2025 DAIJI IMAI</p>
     </div>
 
 </body>
